--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       downloadLink.href = pdfUrl;
       downloadLink.style.display = 'block';
       downloadLink.click();
-      URL.revokeObjectURL(pdfUrl); // Clean up URL object
+      URL.revokeObjectURL(pdfUrl); 
       progress.style.display = 'none';
     }
 
